--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>carewellington</title>
+    <title>placeyourpicks</title>
     <link rel="stylesheet" href="./css/newTab.css">
     <!-- <script src="./js/newTab.js"></script> -->
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
@@ -29,7 +29,7 @@
 
 <body>
     <div class="sec-top-full">
-        <img src="./img/Background.png" alt="carewellington" class="background">
+        <img src="./img/Background.png" alt="placeyourpicks" class="background">
         <div class="main-container">
             <div class="exten-content-full">
                 <div class="exten-content-top">
