addign new chanegs

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 </head>
 
 <body>
+    <div class="mobile-top-view only-mobile">
+        <span>placeyourpicks.com</span>
+    </div>
     <div class="sec-top-full">
         <img src="./img/Background.png" alt="placeyourpicks" class="background">
         <div class="main-container">
@@ -67,16 +70,16 @@
                 ability. If you experience any difficulty in accessing any part of this website, please feel free to
                 email
                 us at <a>accessibility@Placeyourpicks.com</a></p>
-            <div>
-                <img src="" />
-                <img src="" />
+            <div class="images-new-sec-img">
+                <img src="./img/21.png" />
+                <img src="./img/Vector.png" />
             </div>
         </div>
 
     </div>
     <div class="footer-bottom-full">
         <div class="always-left-text">
-            <span>Placeyourpicks.com</span>
+            <span class="footer-logo-sec-bottom">Placeyourpicks.com</span>
             <span class="always-left-text1"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="2"
                     viewBox="0 0 28 2" fill="none">
                     <path d="M27 1H1" stroke="white" stroke-linecap="round" />
