addign new chanegs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <span>placeyourpicks.com</span>
     </div>
     <div class="sec-top-full">
-        <img src="./img/Background.png" alt="placeyourpicks" class="background">
+        <img src="./img/Background.png" alt="placeyourpicks" class="background only-desktop">
+        <img src="./img/Mobile_bg.png" alt="placeyourpicks" class="background only-mobile">
         <div class="main-container">
             <div class="exten-content-full">
                 <div class="exten-content-top">
