addign new chanegs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>placeyourpicks</title>
     <link rel="stylesheet" href="./css/newTab.css">
+    <link rel="shortcut icon" href="./img/Placeyourpicks-Favicon - 32px.png" />
+
     <!-- <script src="./js/newTab.js"></script> -->
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <script type="text/javascript">
